--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,7 +1,7 @@
 env:
   es2021: true
   node: true
-extends: eslint:recommended
+extends: airbnb-base
 overrides: []
 parserOptions:
   ecmaVersion: latest
