--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "lodash": "^4.17.21"
   },
   "devDependencies": {
-    "eslint": "^8.32.0"
+    "eslint": "^8.32.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "jest": "^29.3.1"
   }
 }
