--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/asfiks/frontend-project-46#readme",
   "dependencies": {
+    "@jest/globals": "^29.4.2",
     "commander": "^10.0.0",
     "js-yaml": "^4.1.0",
     "lodash": "^4.17.21"
@@ -29,6 +30,6 @@
     "eslint": "^8.32.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.27.5",
-    "jest": "^29.3.1"
+    "jest": "^29.4.2"
   }
 }
