--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@hexlet/code",
   "version": "1.0.0",
   "type": "module",
-  "description": "[![Actions Status](https://github.com/asfiks/frontend-project-46/workflows/hexlet-check/badge.svg)](https://github.com/asfiks/frontend-project-46/actions)",
+  "description": "CLI utility for finding differences between two files",
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
